--- a/.github/workflows/changelog_actionpost.yml
+++ b/.github/workflows/changelog_actionpost.yml
@@ -1,23 +1,23 @@
-- name: git-cliff - Changelog Generator
-  uses: orhun/git-cliff-action@v1.1.6
+name: Action Test
+
+on: [push]
+
 jobs:
-  changelog:
-    name: Generate changelog
+  git-cliff-action:
     runs-on: ubuntu-latest
+    name: Test the git-cliff changelog generator action
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
       - name: Generate a changelog
-        uses: orhun/git-cliff-action@v1
         id: git-cliff
+        uses: ./
         with:
-          config: cliff.toml
-          args: --verbose
+          config: fixtures/cliff.toml
+          args: --verbose --strip footer
         env:
-          OUTPUT: CHANGELOG.md
-
+          OUTPUT: fixtures/CHANGELOG.md
       - name: Print the changelog
         run: cat "${{ steps.git-cliff.outputs.changelog }}"
